# practice-rust-evm

./: README.md
contracts/: README.md  package.json
contracts-ethers/: .env.template  deploy.sh  hardhat.config.ts  package-lock.json  package.json
contracts-ethers/contracts/: Viewer.sol
contracts-ethers/scripts/: call.ts  deploy.ts  signers.ts
contracts-ethers/test/: Viewer.ts
contracts-viem/: package-lock.json
contracts-viem/scripts/: deploy.ts
contracts-viem/test/: Viewer.ts
contracts/contracts/: Viewer.sol
contracts/scripts/: call.ts
contracts/test/: Viewer.ts
use-solidity-bindgen/: Cargo.toml
use-solidity-bindgen/resources/: OpenMarketViewer.json  OpenMarketViewer_remove_error.json  Viewer.json  expanded_aggregator.rs  expanded_erc20.rs  expanded_lyra.rs  expanded_uniswapv3pool.rs
use-solidity-bindgen/src/: chainlink.rs  erc20.rs  local.rs  lyra.rs  main.rs  uniswap.rs
