[package]
name = "use-solidity-bindgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# futures = "0.3.5"
secp256k1 = "0.20.3"
# solidity-bindgen = "0.1.0"
solidity-bindgen = { path = "../../../graphprotocol/solidity-bindgen/solidity-bindgen" }
web3 = "0.16.0"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.111"
# num-bigint = "0.4.4"
